feat: add basic styles

--- a/src/template.html
+++ b/src/template.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Быстрый запуск Webpack</title>
-  </head>
-  <body>
-    <p>Файл создан плагином html-webpack-plugin</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Krupetskov Maxim CV</title>
+</head>
+<body>
+  <header class="header container">
+    <div class="header__photo">
+      <img src="" alt="">
+    </div>
+    <nav class="header__nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#"> About me</a></li>
+        <li class="nav__item"><a href="#"> Portfolio</a></li>
+        <li class="nav__item"><a href="#"> Contacts</a></li>
+      </ul>
+    </nav>
+    <div class="header__title">
+      <h1 class="title__text title__text--h1">Krupetskov Maxim</h1>
+      <h2 class="title__text title__text--h2">Frontend Developer</h2>
+    </div>
+  </header>
+  <main class="main container">
+    <div class="main__animation">
+
+    </div>
+    <div class="main__about-me">
+
+    </div>
+    <div class="main__skills">
+
+    </div>
+    <div class="main__portfolio">
+      
+    </div>
+  </main>
+  <footer class="footer container">
+    <div class="footer__contacts">
+
+    </div>
+  </footer>
+</body>
 </html>
